# DEversAI

./: .gitignore  README.md
datasets-translate/: hellaswag.py
deep-backend/: Dockerfile  main.py  models.py  requirements.txt  vocabulary.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: navigation.ts
frontend/src/lib/backend/: client.ts  geminiTypes.ts  models.ts  types.ts
frontend/src/lib/components/: AugmentedTokenList.svelte  BorderSection.svelte  Deployment.svelte  (+15 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
nanogpt/: Dockerfile  extract_cca_meaning.py  extract_corpus_examples.py  extract_gutenberg.py  extract_layer.py  extract_layer_2.py  extract_layer_augment.py  extract_layer_cca.py  extract_layer_print3d.py  extract_layer_scree.py  extract_layer_tokens.py  extract_länder.py  extract_numpy_cca.py  extract_prob_diagram.py  extract_staaten.py  extract_test_logits_comparison.py  extract_vornamen.py  finetune.py  gpt.py  model.py  sample.py  test.py  train.py
nanogpt/output/: anticausal1-embedding.npy
oscar-tokenize/: Cargo.toml  Dockerfile  to_base64.py
oscar-tokenize/src/: bpe_state.rs  config.rs  count.rs  dataset.rs  histogram.rs  lib.rs  main.rs  token.rs  xml.rs
oscar-tokenize/src/dataset/: huggingface.rs  wikipedia.rs
shallow-backend/: conf.py  main.py  validate.py
shallow-backend/assets/: direct_histogram.txt  direct_histogram2.txt  transitive_histogram.txt  transitive_histogram2.txt
shared/: gpt.py  models.py  vocabulary.py
(+38 files in other folders)
